Fix funky message truncation on mobile

--- a/src/sentry/static/sentry/less/group-detail.less
+++ b/src/sentry/static/sentry/less/group-detail.less
@@ -6,6 +6,7 @@
 .group-detail {
   position: relative;
   margin: 0 0 20px;
+  clear: both;
 
   &:before {
     position: absolute;
